cabal-version:      3.0
name:               AutoLink
version:            0.0.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Matthew Hillman
-- maintainer:
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  CMakeParse
                    , CMakeUtils
                    , DirectoryTraverse
                    , Project
    -- other-modules:
    -- other-extensions:
    default-extensions:
        OverloadedStrings
    build-depends:    base ^>=4.20.0.0
                    , containers
                    , directory
                    , filepath
                    , parsec
                    , text
    hs-source-dirs:   src
    default-language: GHC2024

executable AutoLink
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.0.0,
        AutoLink,
        parsec,
        text

    hs-source-dirs:   app
    default-language: GHC2024

test-suite AutoLink-test
    import:           warnings
    default-language: GHC2024
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        AutoLink
